# subscriptions-monitor-windows-widget

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  FIX_TODO.md  README.md  build.bat  build.ps1
src/: app.rc  http_client.cpp  http_client.h  main.cpp  renderer.cpp  renderer.h  resource.h  subscription.cpp  subscription.h
